tooling/nargo_cli/tests/snapshots/execution_failure/regression_5202/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false
   ┌─ src/main.nr:45:5
   │
45 │     assert_eq(magic, false);
   │     ----------------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
   │
   = Call stack:
     1: main
             at src/main.nr:45:5

Aborting due to 1 previous error
