tooling/nargo_cli/tests/snapshots/execution_failure/regression_5202/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed to solve program: 'Failed to solve brillig function'
   ┌─ src/main.nr:45:5
   │
45 │     assert_eq(magic, false);
   │     -----------------------
   │
   = Call stack:
     1: main
             at src/main.nr:45:5

Failed to solve program: 'Failed to solve brillig function'
