tooling/nargo_cli/tests/snapshots/execution_failure/regression_5202/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
   ┌─ src/main.nr:45:15
   │
45 │     assert_eq(magic, false);
   │               ------------
   │
   = Call stack:
     1. src/main.nr:40:4

Error interpreting main function
