tooling/nargo_cli/tests/snapshots/execution_failure/regression_5202/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
bug: Assertion is always false
   ┌─ src/main.nr:45:15
   │
45 │     assert_eq(magic, false);
   │               ------------ As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
   │
   = Call stack:
     1. src/main.nr:45:15

error: Failed constraint
   ┌─ src/main.nr:45:15
   │
45 │     assert_eq(magic, false);
   │               ------------
   │
   = Call stack:
     1. src/main.nr:45:15

Failed to solve program: 'Cannot satisfy constraint'
